# P1AC

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  test_random_problems.cpp
examples/problem_generator/: problem_generator.cpp  problem_generator.h  random.h
p1ac/: p1ac.cpp  p1ac.h
